# test-log

./: .gitignore  .rustfmt.toml  .taplo.toml  CHANGELOG.md  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml  test.yml
ci/: gitlab-ci.yml
core/: Cargo.toml
core/src/: lib.rs
core/tests/: failures.rs  snapshots.rs
core/tests/snapshots/: snapshots__bare_test@log.snap  snapshots__bare_test@log_trace.snap  snapshots__bare_test@none.snap  snapshots__default_log_filter@log.snap  snapshots__default_log_filter@trace.snap  snapshots__inner_tokio_test@log.snap  snapshots__inner_tokio_test@none.snap  snapshots__inner_tokio_test@trace.snap  snapshots__stacked_core_prelude_test@log.snap  snapshots__stacked_core_prelude_test@log_trace.snap  snapshots__stacked_core_prelude_test@none.snap  snapshots__stacked_test_attribute@log.snap  snapshots__stacked_test_attribute@log_trace.snap  snapshots__stacked_test_attribute@none.snap  snapshots__with_return_type@log.snap  snapshots__with_return_type@log_trace.snap  snapshots__with_return_type@none.snap
crates/test-log-macros/src/: lib.rs
examples/: main.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: lib.rs  tracing.rs
tests/: default_log_filter.rs  mod.rs  no_std_required.rs  output.rs  prototype.rs
