[package]
name = "test-log"
version = "0.2.14"
authors = ["Daniel Mueller <deso@posteo.net>"]
edition = "2021"
rust-version = "1.61"
license = "Apache-2.0 OR MIT"
homepage = "https://github.com/d-e-s-o/test-log"
repository = "https://github.com/d-e-s-o/test-log.git"
readme = "README.md"
categories = [
  "development-tools::testing",
  "development-tools",
  "config",
  "api-bindings",
]
keywords = [
  "env_logger",
  "log",
  "logging",
  "testing",
  "tracing",
]
description = """
A replacement of the #[test] attribute that initializes logging and/or
tracing infrastructure before running tests.
"""
include = ["src/lib.rs", "LICENSE-*", "README.md", "CHANGELOG.md"]

[[test]]
name = "default_log_filter"
path = "tests/default_log_filter.rs"
required-features = ["log", "unstable"]

[features]
default = ["log"]
# TODO: use "dep:{tracing-subscriber,evn_logger}" once our MSRV is 1.60 or higher.
trace = ["tracing-subscriber", "test-log-macros/trace"]
log = ["env_logger", "test-log-macros/log"]
# Enable unstable features. These are generally exempt from any semantic
# versioning guarantees.
unstable = ["test-log-macros/unstable"]

[workspace]
members = ["macros"]

[dependencies]
test-log-macros = {version = "0.2.14", path = "macros"}
tracing-subscriber = {version = "0.3.17", default-features = false, optional = true, features = ["env-filter", "fmt"]}
env_logger = {version = "0.10", default-features = false, optional = true}

[dev-dependencies]
logging = {version = "0.4.8", package = "log"}
test-case = {version = "3.1"}
tokio = {version = "1.0", default-features = false, features = ["rt-multi-thread", "macros"]}
tracing = {version = "0.1.20"}

# error: cannot find macro `__lazy_static_internal` in this scope
#   --> ~/.cargo/registry/src/github.com-1ecc6299db9ec823/sharded-slab-0.1.4/src/tid.rs:33:1
#    |
# 33 | / lazy_static! {
# 34 | |     static ref REGISTRY: Registry = Registry {
# 35 | |         next: AtomicUsize::new(0),
# 36 | |         free: Mutex::new(VecDeque::new()),
# 37 | |     };
# 38 | | }
#    | |_^
#    |
#    = note: this error originates in the macro `lazy_static` (in Nightly builds, run with -Z macro-backtrace for more info)
#
# Probably fixed by https://github.com/rust-lang-nursery/lazy-static.rs/pull/107.
_lazy_static_unused = { package = "lazy_static", version = "1.0.2" }
