[workspace]
members = ["macros"]

[workspace.lints.rust]
deprecated-safe = "warn"
future-incompatible = "warn"
keyword-idents = "warn"
let-underscore = "warn"
missing-debug-implementations = "warn"
missing-docs = "warn"
trivial-numeric-casts = "warn"
unsafe-op-in-unsafe-fn = "warn"
unused = "warn"

[workspace.lints.clippy]
collapsible-else-if = "allow"
collapsible-if = "allow"
diverging-sub-expression = "allow"
let-and-return = "allow"
let-unit-value = "allow"
module-inception = "allow"
type-complexity = "allow"
absolute-paths = "warn"
allow-attributes = "warn"
clone-on-ref-ptr = "warn"
dbg-macro = "warn"
derive-partial-eq-without-eq = "warn"
doc-markdown = "warn"
join-absolute-paths = "warn"
large-enum-variant = "warn"
redundant-closure-for-method-calls = "warn"
unchecked-duration-subtraction = "warn"
uninlined-format-args = "warn"
wildcard-imports = "warn"

[package]
name = "test-log"
version = "0.2.18"
authors = ["Daniel Mueller <deso@posteo.net>"]
edition = "2021"
rust-version = "1.71"
license = "Apache-2.0 OR MIT"
homepage = "https://github.com/d-e-s-o/test-log"
repository = "https://github.com/d-e-s-o/test-log.git"
readme = "README.md"
categories = [
  "development-tools::testing",
  "development-tools",
  "config",
  "api-bindings",
]
keywords = [
  "env_logger",
  "log",
  "logging",
  "testing",
  "tracing",
]
description = """
A replacement of the #[test] attribute that initializes logging and/or
tracing infrastructure before running tests.
"""
include = ["src/lib.rs", "LICENSE-*", "README.md", "CHANGELOG.md"]

[[test]]
name = "default_log_filter"
path = "tests/default_log_filter.rs"
required-features = ["log", "unstable"]

[features]
default = ["log", "color"]
trace = ["dep:tracing-subscriber", "test-log-macros/trace"]
log = ["dep:env_logger", "test-log-macros/log", "tracing-subscriber?/tracing-log"]
color = ["env_logger?/auto-color", "tracing-subscriber?/ansi"]
# Enable unstable features. These are generally exempt from any semantic
# versioning guarantees.
unstable = ["test-log-macros/unstable"]

[dependencies]
test-log-macros = {version = "0.2.18", path = "macros"}
tracing-subscriber = {version = "0.3.17", default-features = false, optional = true, features = ["env-filter", "fmt"]}
env_logger = {version = "0.11", default-features = false, optional = true}

[dev-dependencies]
logging = {version = "0.4.8", package = "log"}
rstest = "0.26.1"
test-case = {version = "3.1"}
tokio = {version = "1.38", default-features = false, features = ["rt-multi-thread", "macros"]}
tracing = {version = "0.1.20"}

[lints]
workspace = true
