[package]
name = "test-log-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = """
Core logic for the test-log procedural macro.
"""
include = ["src/lib.rs", "LICENSE-*"]

[features]
default = ["log"]
trace = []
log = []
unstable = []

[[test]]
name = "failures"
required-features = ["unstable"]

[dependencies]
proc-macro2 = { version = "1.0", default-features = false }
quote = { version = "1.0", default-features = false }
syn = { version = "2.0", default-features = false, features = ["full", "parsing", "printing", "proc-macro"] }

[dev-dependencies]
insta = { version = "1.47", default-features = false }
prettyplease = "0.2"
quote = { version = "1.0" }
syn = { version = "2.0", features = ["full", "parsing"] }

[lints]
workspace = true
