[package]
name = "test-log-macros"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = """
Supporting procedural macro crate for test-log.
"""

[lib]
proc-macro = true

[features]
default = ["log"]
trace = ["test-log-core/trace"]
log = ["test-log-core/log"]
unstable = ["test-log-core/unstable"]

[dependencies]
syn = { version = "2.0", default-features = false, features = ["full", "parsing", "proc-macro"] }
test-log-core = { version = "=0.2.19", path = "../core", default-features = false }

[lints]
workspace = true
